--- a/package.json
+++ b/package.json
@@ -12,29 +12,32 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@iconify/svelte": "^4.0.2",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/enhanced-img": "^0.2.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^8.56.7",
+    "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
+    "daisyui": "^4.11.1",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^5.0.0-next.149",
     "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.0.0-alpha.20",
-    "vite": "^5.0.3",
-    "autoprefixer": "^10.4.19",
-    "cross-env": "^7.0.3",
-    "daisyui": "^4.11.1",
-    "postcss": "^8.4.38",
     "sveltekit-superforms": "2.14.0",
     "tailwindcss": "^3.4.3",
+    "tslib": "^2.4.1",
     "tsx": "^4.11.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.0.0-alpha.20",
+    "unplugin-icons": "^0.19.0",
+    "vite": "^5.0.3",
     "zod": "^3.23.8"
   },
   "type": "module",
@@ -44,6 +47,7 @@
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "lucide-svelte": "^0.379.0",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "simple-icons": "^12.1.0"
   }
 }
